feat(freight): refactor load planning to consume structured manifest classification